--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         </div>
         <nav>
           <ul>
-            <li><a href="#intro">Intro</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#intro">About</a></li>
+            <li><a href="#work">Projects</a></li>
+            <li><a href="#about">Resume</a></li>
             <li><a href="#contact">Contact</a></li>
             <!--<li><a href="#elements">Elements</a></li>-->
           </ul>
@@ -54,33 +54,39 @@
       <div id="main">
         <!-- Intro -->
         <article id="intro">
-          <h2 class="major">Intro</h2>
-          <span class="image main"><img src="images/intro2.jpg" alt="" /></span>
+          <h2 class="major">ABOUT</h2>
+          <span class="image main"><img src="images/intro.jpg" alt="" /></span>
           <p>
-            Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin
-            aliquam facilisis ante interdum congue. Integer mollis, nisl amet
-            convallis, porttitor magna ullamcorper, amet egestas mauris. Ut
-            magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas.
-            By the way, check out my <a href="#work">awesome work</a>.
+            Hi, My name is Katya. I have background in international law and
+            e-coomerce and am now pursuing a career of software developer.
           </p>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
-            dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora
-            torquent per conubia nostra, per inceptos himenaeos. Etiam tristique
-            libero eu nibh porttitor fermentum. Nullam venenatis erat id
-            vehicula viverra. Nunc ultrices eros ut ultricies condimentum.
-            Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae
-            dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in
-            lectus. Pellentesque habitant morbi tristique senectus et netus et
-            malesuada fames ac turpis egestas. In non lorem sit amet elit
-            placerat maximus. Pellentesque aliquam maximus risus, vel sed
-            vehicula.
+            I began my career as paralegal and worked my way up to legal
+            counsel. After several years of practicing corporate law I then
+            moved to New York and started considering new opportunities. That’s
+            when I met the founder of Mend After Cancer, a cancer recovery
+            online store and community.
           </p>
+          <p>
+            I started working as a consultant doing a variety of different jobs,
+            gained a better understanding of e-commerce and worked very closely
+            with the tech team. I’ve got inspired by the team and I’ve learnt so
+            much from them. At that point I couldn’t but decide to switch my
+            career and attend a coding bootcamp - Fullstack Academy.
+          </p>
+          <p>
+            I have recently graduated from Fullstack Academy and am currently a
+            Software Engineering Teaching Fellow there. I am very excited for
+            future opportunities and am looking forward to work in a company
+            with supportive culture and team that’s passionate about the product
+            that creates social good.
+          </p>
+          <p>By the way, check out my <a href="#work">awesome work</a>.</p>
         </article>
 
         <!-- Work -->
         <article id="work">
-          <h2 class="major">Work</h2>
+          <h2 class="major">PROJECTS</h2>
           <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
           <p>
             Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu,
@@ -99,9 +105,9 @@
           </p>
         </article>
 
-        <!-- About -->
+        <!-- Resume -->
         <article id="about">
-          <h2 class="major">About</h2>
+          <h2 class="major">RESUME</h2>
           <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
           <p>
             Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent
@@ -116,7 +122,7 @@
 
         <!-- Contact -->
         <article id="contact">
-          <h2 class="major">Contact</h2>
+          <h2 class="major">CONTACT</h2>
           <form method="post" action="#">
             <div class="fields">
               <div class="field half">
