add: cookStars project to allProjects view

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
           <h2 class="major">ABOUT</h2>
           <span class="image main"><img src="images/intro.jpg" alt="" /></span>
           <p>
-            Hi, My name is Katya. I have background in international law and
-            e-coomerce and am now pursuing a career of software developer.
+            Hi, My name is Ekaterina or Katya for short. I have background in
+            international law and e-commerce and am now pursuing a career of
+            software developer.
           </p>
           <p>
             I began my career as paralegal and worked my way up to legal
@@ -68,11 +69,12 @@
             online store and community.
           </p>
           <p>
-            I started working as a consultant doing a variety of different jobs,
-            gained a better understanding of e-commerce and worked very closely
-            with the tech team. I’ve got inspired by the team and I’ve learnt so
-            much from them. At that point I couldn’t but decide to switch my
-            career and attend a coding bootcamp - Fullstack Academy.
+            I started working at Mend as a consultant doing a variety of
+            different jobs, gained a better understanding of e-commerce and
+            worked very closely with the tech team. I’ve got inspired by the
+            team and I’ve learnt so much from them. At that point I couldn’t but
+            decide to switch my career and attend a coding bootcamp - Fullstack
+            Academy.
           </p>
           <p>
             I have recently graduated from Fullstack Academy and am currently a
@@ -86,8 +88,84 @@
 
         <!-- Work -->
         <article id="work">
-          <h2 class="major">PROJECTS</h2>
-          <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+          <div style="display: flex; justify-content: space-between" }}>
+            <h2 class="major">PROJECTS</h2>
+            <a
+              href="https://github.com/EkaterinaSerga"
+              target="_blank"
+              rel="noopener noreferrer"
+              class="button resumeDownload"
+            >
+              MY GITHUB
+            </a>
+          </div>
+          <ul class="actions">
+            <!-- 1 project -->
+            <li>
+              <span class="image main"
+                ><iframe
+                  class="image main"
+                  width="560"
+                  height="400"
+                  src="https://www.youtube.com/embed/cffsw_mQvZo"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe
+              ></span>
+              <div
+                class="header-div"
+                style="display: flex; justify-content: space-between"
+              >
+                <a href="https://www.bit.ly/cookstars">
+                  <h2 style="align-items: center">Cook Stars</h2>
+                </a>
+                <a
+                  href="https://github.com/EkaterinaSerga/cookstarsapp"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon brands fa-github"
+                  ><span class="label">Github</span></a
+                >
+              </div>
+              <p style="padding: 10px 0px">
+                CookStars is a mobile App that challenges users to cook at home
+                by offering recipes and ranking users by earning points and
+                badges. We built Cookstars to help people save money and avoid
+                the frustration of planning by offering recipes weekly that they
+                can easily follow. These recipes are diverse and tailored
+                according to the user's dietary preference. The process of
+                cooking is made easy and entertaining with step-by-step
+                instruction and points awarded.
+              </p>
+
+              <h3 class="stacks"><i>TECH STACK</i></h3>
+              <p>
+                Our app is built on <b>React Native</b> and utilizes the
+                <b>Expo</b> framework to allow for quick development and
+                iterations of the code base. For the database we used
+                <b>Firebase</b>, which provides our application the ability to
+                authenticate, retrieve and store data, and schedule API requests
+                in the background. The application also uses API called
+                <b>Spoonacular</b> to provide recipes on a weekly basis.
+              </p>
+              <div style="display: flex; justify-content: space-around">
+                <div style="border-color: white; border: solid; padding: 10px">
+                  React Native
+                </div>
+                <div style="border-color: white; border: solid; padding: 10px">
+                  Expo
+                </div>
+                <div style="border-color: white; border: solid; padding: 10px">
+                  Firebase Firestore
+                </div>
+                <div style="border-color: white; border: solid; padding: 10px">
+                  Spoonacular API
+                </div>
+              </div>
+            </li>
+          </ul>
+          <!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
           <p>
             Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu,
             at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent
@@ -102,7 +180,7 @@
             Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis
             libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat
             tempus.
-          </p>
+          </p> -->
         </article>
 
         <!-- Resume -->
@@ -163,7 +241,7 @@
             </li>
             <li>
               <a
-                href="http://github.com/EkaterinaSerga"
+                href="https://github.com/EkaterinaSerga"
                 class="icon brands fa-github"
                 ><span class="label">GitHub</span></a
               >
