--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
               MY GITHUB
             </a>
           </div>
-          <ul class="actions">
+          <div class="actions">
             <!-- 1 project -->
-            <li>
+            <div>
               <span class="image main"
                 ><iframe
                   class="image main"
@@ -163,8 +163,160 @@
                   Spoonacular API
                 </div>
               </div>
-            </li>
-          </ul>
+            </div>
+            <hr />
+            <div>
+              <span class="image main"
+                ><iframe
+                  width="560"
+                  height="400"
+                  src="https://www.youtube.com/embed/whkCGgy3M-o"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+              </span>
+              <div
+                class="header-div"
+                style="display: flex; justify-content: space-between"
+              >
+                <a href="http://www.mapforaction.com/">
+                  <h2 style="align-items: center">Map For Action</h2>
+                </a>
+                <a
+                  href="https://www.bit.ly/MapForAction"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="icon brands fa-github"
+                  ><span class="label">Github</span></a
+                >
+              </div>
+              <p style="padding: 10px 0px">
+                MapForAction is a platform for taking action on incidents of
+                police violence and racial injustice. It brings together
+                information about incidents in an attempt to clarify them as
+                well as deliver clear actions to help support the victims and
+                movements associated with the situation. The map allows people
+                to discover incidents on location based as well as help
+                visualizing the areas that may have many incidents occur. That
+                way, law enforcement can also further investigate/take
+                action/prevent more crime in those specific areas.
+              </p>
+
+              <h3 class="stacks"><i>TECH STACK</i></h3>
+              <p>
+                Map for Action utilizes <b>Node.js</b> on the backend and a
+                <b>React</b> front-end. In order to render the map portion of
+                the application, we utilized the <b>Google Map API</b>. The
+                Google Places API was also utilized with the autocomplete
+                feature so users could specify specific locations when
+                submitting incidents. Twitter posts utilized <b>Twitter API</b>
+                which allowed us to embed actual tweets inside our application.
+                <b>Material UI</b> was used as our main styling library.
+              </p>
+              <div style="display: flex; flex-direction: column">
+                <div
+                  style="
+                    display: flex;
+                    justify-content: space-around;
+                    padding: 10px;
+                  "
+                >
+                  <div
+                    style="border-color: white; border: solid; padding: 10px"
+                  >
+                    React
+                  </div>
+                  <div
+                    style="border-color: white; border: solid; padding: 10px"
+                  >
+                    Node.js
+                  </div>
+                  <div
+                    style="border-color: white; border: solid; padding: 10px"
+                  >
+                    Mongoose
+                  </div>
+                  <div
+                    style="border-color: white; border: solid; padding: 10px"
+                  >
+                    Express
+                  </div>
+                </div>
+                <div
+                  style="
+                    display: flex;
+                    justify-content: space-around;
+                    padding: 10px;
+                  "
+                >
+                  <div
+                    style="border-color: white; border: solid; padding: 10px"
+                  >
+                    Google Map API
+                  </div>
+                  <div
+                    style="border-color: white; border: solid; padding: 10px"
+                  >
+                    Twitter API
+                  </div>
+                  <div
+                    style="border-color: white; border: solid; padding: 10px"
+                  >
+                    Material UI
+                  </div>
+                </div>
+              </div>
+            </div>
+            <hr />
+            <div>
+              <span class="image main"
+                ><img src="images/shopx.png" alt=""
+              /></span>
+              <div
+                class="header-div"
+                style="display: flex; justify-content: space-between"
+              >
+                <h2 style="align-items: center">ShopX</h2>
+              </div>
+              <p style="padding: 10px 0px">
+                An experience e-shop that fulfills the urge of ‘buying something
+                new’ while saving the planet from extra junk we consume every
+                day.
+              </p>
+
+              <h3 class="stacks"><i>TECH STACK</i></h3>
+              <p>
+                Work in progress. ShopX has a <b>Node.js</b> backend and a
+                <b>React</b> front-end. Users are able to place products in the
+                cart and complete the purchase. <b>Material UI</b> was used as
+                the main styling library.
+              </p>
+              <div
+                style="
+                  display: flex;
+                  flex-direction: row;
+                  justify-content: space-around;
+                "
+              >
+                <div style="border-color: white; border: solid; padding: 10px">
+                  React
+                </div>
+                <div style="border-color: white; border: solid; padding: 10px">
+                  Node.js
+                </div>
+                <div style="border-color: white; border: solid; padding: 10px">
+                  CSS
+                </div>
+                <div style="border-color: white; border: solid; padding: 10px">
+                  Express
+                </div>
+                <div style="border-color: white; border: solid; padding: 10px">
+                  Material UI
+                </div>
+              </div>
+            </div>
+          </div>
           <!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span>
           <p>
             Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu,
