--- a/index.html
+++ b/index.html
@@ -338,16 +338,16 @@
         <!-- Resume -->
         <article id="about">
           <h2 class="major">RESUME</h2>
-          <span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent
-            eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam
-            erat volutpat. Praesent urna nisi, fringila lorem et vehicula
-            lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.
-            Aliquam libero et malesuada fames ac ante ipsum primis in faucibus.
-            Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit
-            amet.
-          </p>
+          <a
+            href="/images/Resume_EkaterinaSerga_SoftwareDeveloper.pdf"
+            download="Resume_EkaterinaSerga_SoftwareDeveloper.pdf"
+            class="button resumeDownload"
+          >
+            DOWNLOAD A COPY
+          </a>
+          <span class="image main"
+            ><img src="/images/Resume_EkaterinaSerga.png" alt=""
+          /></span>
         </article>
 
         <!-- Contact -->
