link: social media

--- a/index.html
+++ b/index.html
@@ -48,6 +48,43 @@
             <!--<li><a href="#elements">Elements</a></li>-->
           </ul>
         </nav>
+        <ul class="icons">
+          <li>
+            <a
+              href="https://www.https://twitter.com/SergaKatya"
+              class="icon brands fa-twitter"
+              ><span class="label">Twitter</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.facebook.com/yekaterina.pyakshina"
+              class="icon brands fa-facebook-f"
+              ><span class="label">Facebook</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.instagram.com/katyaserga/"
+              class="icon brands fa-instagram"
+              ><span class="label">Instagram</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://www.linkedin.com/in/ekaterinaserga"
+              class="icon brands fa-linkedin"
+              ><span class="label">LinkedIn</span></a
+            >
+          </li>
+          <li>
+            <a
+              href="https://github.com/EkaterinaSerga"
+              class="icon brands fa-github"
+              ><span class="label">GitHub</span></a
+            >
+          </li>
+        </ul>
       </header>
 
       <!-- Main -->
@@ -120,13 +157,17 @@
                 <a href="https://www.bit.ly/cookstars">
                   <h2 style="align-items: center">Cook Stars</h2>
                 </a>
-                <a
-                  href="https://github.com/EkaterinaSerga/cookstarsapp"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="icon brands fa-github"
-                  ><span class="label">Github</span></a
-                >
+                <ul class="icons">
+                  <li>
+                    <a
+                      href="https://github.com/EkaterinaSerga/cookstarsapp"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      class="icon brands fa-github"
+                      ><span class="label">Github</span></a
+                    >
+                  </li>
+                </ul>
               </div>
               <p style="padding: 10px 0px">
                 CookStars is a mobile App that challenges users to cook at home
@@ -183,13 +224,17 @@
                 <a href="http://www.mapforaction.com/">
                   <h2 style="align-items: center">Map For Action</h2>
                 </a>
-                <a
-                  href="https://www.bit.ly/MapForAction"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  class="icon brands fa-github"
-                  ><span class="label">Github</span></a
-                >
+                <ul class="icons">
+                  <li>
+                    <a
+                      href="https://www.bit.ly/MapForAction"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      class="icon brands fa-github"
+                      ><span class="label">Github</span></a
+                    >
+                  </li>
+                </ul>
               </div>
               <p style="padding: 10px 0px">
                 MapForAction is a platform for taking action on incidents of
@@ -278,6 +323,9 @@
                 style="display: flex; justify-content: space-between"
               >
                 <h2 style="align-items: center">ShopX</h2>
+                <ul class="icons">
+                  <li></li>
+                </ul>
               </div>
               <p style="padding: 10px 0px">
                 An experience e-shop that fulfills the urge of ‘buying something
@@ -377,18 +425,31 @@
           </form>
           <ul class="icons">
             <li>
-              <a href="#" class="icon brands fa-twitter"
+              <a
+                href="https://www.https://twitter.com/SergaKatya"
+                class="icon brands fa-twitter"
                 ><span class="label">Twitter</span></a
               >
             </li>
             <li>
-              <a href="#" class="icon brands fa-facebook-f"
+              <a
+                href="https://www.facebook.com/yekaterina.pyakshina"
+                class="icon brands fa-facebook-f"
                 ><span class="label">Facebook</span></a
               >
             </li>
             <li>
-              <a href="#" class="icon brands fa-instagram"
+              <a
+                href="https://www.instagram.com/katyaserga/"
+                class="icon brands fa-instagram"
                 ><span class="label">Instagram</span></a
+              >
+            </li>
+            <li>
+              <a
+                href="https://www.linkedin.com/in/ekaterinaserga"
+                class="icon brands fa-linkedin"
+                ><span class="label">LinkedIn</span></a
               >
             </li>
             <li>
@@ -711,9 +772,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
       <!-- Footer -->
       <footer id="footer">
-        <p class="copyright">
-          &copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.
-        </p>
+        <p class="copyright">&copy; Ekaterina Serga: 2020</p>
       </footer>
     </div>
 
