edit: video frame style

--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@
             <div>
               <span class="image main"
                 ><iframe
+                  class="image main"
                   width="560"
                   height="400"
                   src="https://www.youtube.com/embed/whkCGgy3M-o"
