--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Dimension by HTML5 UP</title>
+    <title>Personal Portfolio of Ekaterina Serga</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
