add: links to ShopX project github + website

--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
           </p>
           <p>
             I have recently graduated from Fullstack Academy and am currently a
-            Software Engineering Teaching Fellow there. I am very excited for
-            future opportunities and am looking forward to work in a company
-            with supportive culture and team that’s passionate about the product
-            that creates social good.
+            Senior Software Engineering Teaching Fellow there. I am very excited
+            for future opportunities and am looking forward to work as a
+            fullstack developer in a company with supportive culture and team
+            that’s passionate about the product that creates social good.
           </p>
           <p>By the way, check out my <a href="#work">awesome work</a>.</p>
         </article>
@@ -356,9 +356,19 @@
                 class="header-div"
                 style="display: flex; justify-content: space-between"
               >
-                <h2 style="align-items: center">ShopX</h2>
+                <a href="https://shop-experience.herokuapp.com/">
+                  <h2 style="align-items: center">ShopX</h2>
+                </a>
                 <ul class="icons">
-                  <li></li>
+                  <li>
+                    <a
+                      href="http://bit.ly/3pKQfX8"
+                      target="_blank"
+                      rel="noopener noreferrer"
+                      class="icon brands fa-github"
+                      ><span class="label">Github</span></a
+                    >
+                  </li>
                 </ul>
               </div>
               <p style="padding: 10px 0px">
