add copyright mentions, adjust design

--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
     <div id="wrapper">
       <!-- Header -->
       <header id="header">
-        <div class="logo">
-          <span class="icon fa-gem"></span>
-        </div>
+        <nav>
+          <ul>
+            <li><a href="#intro">About</a></li>
+            <li><a href="#work">WORK</a></li>
+            <li><a href="#about">Resume</a></li>
+          </ul>
+        </nav>
         <div class="content">
           <div class="inner">
             <h1>Ekaterina Serga</h1>
@@ -39,15 +43,6 @@
             </p>
           </div>
         </div>
-        <nav>
-          <ul>
-            <li><a href="#intro">About</a></li>
-            <li><a href="#work">Projects</a></li>
-            <li><a href="#about">Resume</a></li>
-            <!-- <li><a href="#contact">Contact</a></li> -->
-            <!--<li><a href="#elements">Elements</a></li>-->
-          </ul>
-        </nav>
         <ul class="icons">
           <li>
             <a
@@ -126,15 +121,13 @@
         <!-- Work -->
         <article id="work">
           <div style="display: flex; justify-content: space-between" }}>
-            <h2 class="major">PROJECTS</h2>
-            <a
-              href="https://github.com/EkaterinaSerga"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="button resumeDownload"
-            >
-              MY GITHUB
-            </a>
+            <a href="#" style="border-bottom: none"
+              ><i
+                class="fas fa-chevron-left"
+                style="padding: 20px; height: 20px"
+              ></i
+            ></a>
+            <h2 class="major">MY WORK</h2>
           </div>
           <div class="actions">
             <!-- 1 project -->
@@ -154,20 +147,15 @@
                 class="header-div"
                 style="display: flex; justify-content: space-between"
               >
-                <a href="https://www.bit.ly/cookstars">
-                  <h2 style="align-items: center">Cook Stars</h2>
-                </a>
-                <ul class="icons">
-                  <li>
-                    <a
-                      href="https://github.com/EkaterinaSerga/cookstarsapp"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      class="icon brands fa-github"
-                      ><span class="label">Github</span></a
-                    >
-                  </li>
-                </ul>
+                <h2 style="align-items: center; padding: 10px">Cook Stars</h2>
+                <div style="padding: 1em">
+                  <a href="https://github.com/EkaterinaSerga/cookstarsapp"
+                    ><i class="icon brands fa-github fa-lg"></i
+                  ></a>
+                  <a href="https://www.bit.ly/cookstars"
+                    ><i class="fas fa-link fa-lg"></i>
+                  </a>
+                </div>
               </div>
               <p style="padding: 10px 0px">
                 CookStars is a mobile App that challenges users to cook at home
@@ -222,20 +210,17 @@
                 class="header-div"
                 style="display: flex; justify-content: space-between"
               >
-                <a href="http://www.mapforaction.com/">
-                  <h2 style="align-items: center">Map For Action</h2>
-                </a>
-                <ul class="icons">
-                  <li>
-                    <a
-                      href="https://www.bit.ly/MapForAction"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      class="icon brands fa-github"
-                      ><span class="label">Github</span></a
-                    >
-                  </li>
-                </ul>
+                <h2 style="align-items: center; padding: 10px">
+                  Map For Action
+                </h2>
+                <div style="padding: 1em">
+                  <a href="https://www.bit.ly/MapForAction"
+                    ><i class="icon brands fa-github fa-lg"></i
+                  ></a>
+                  <a href="http://www.mapforaction.com/"
+                    ><i class="fas fa-link fa-lg"></i>
+                  </a>
+                </div>
               </div>
               <p style="padding: 10px 0px">
                 MapForAction is a platform for taking action on incidents of
@@ -356,20 +341,15 @@
                 class="header-div"
                 style="display: flex; justify-content: space-between"
               >
-                <a href="https://shop-experience.herokuapp.com/">
-                  <h2 style="align-items: center">ShopX</h2>
-                </a>
-                <ul class="icons">
-                  <li>
-                    <a
-                      href="http://bit.ly/3pKQfX8"
-                      target="_blank"
-                      rel="noopener noreferrer"
-                      class="icon brands fa-github"
-                      ><span class="label">Github</span></a
-                    >
-                  </li>
-                </ul>
+                <h2 style="align-items: center; padding: 10px">ShopX</h2>
+                <div style="padding: 1em">
+                  <a href="http://bit.ly/3pKQfX8"
+                    ><i class="icon brands fa-github fa-lg"></i
+                  ></a>
+                  <a href="https://shop-experience.herokuapp.com/"
+                    ><i class="fas fa-link fa-lg"></i>
+                  </a>
+                </div>
               </div>
               <p style="padding: 10px 0px">
                 An experience e-shop that fulfills the urge of ‘buying something
@@ -413,23 +393,35 @@
 
         <!-- Resume -->
         <article id="about">
-          <h2 class="major">RESUME</h2>
+          <div style="display: flex; justify-content: space-between" }}>
+            <a href="#" style="border-bottom: none"
+              ><i
+                class="fas fa-chevron-left"
+                style="padding: 20px; height: 20px"
+              ></i
+            ></a>
+            <h2 class="major">RESUME</h2>
+          </div>
+          <span class="image main"
+            ><img src="/images/Resume_EkaterinaSerga.png" alt=""
+          /></span>
           <a
             href="/images/Resume_EkaterinaSerga_SoftwareDeveloper.pdf"
             download="Resume_EkaterinaSerga_SoftwareDeveloper.pdf"
             class="button resumeDownload"
           >
-            DOWNLOAD A COPY
+            DOWNLOAD
           </a>
-          <span class="image main"
-            ><img src="/images/Resume_EkaterinaSerga.png" alt=""
-          /></span>
         </article>
       </div>
 
       <!-- Footer -->
       <footer id="footer">
-        <p class="copyright">&copy; Ekaterina Serga: 2020</p>
+        <p class="copyright">
+          &copy; Ekaterina Serga, 2020 DESIGN:
+          <a href="https://html5up.net">HTML5 UP</a> IMAGES:
+          <a href="https://www.instagram.com/t_a.r_o/">Maxim Tarasov</a>
+        </p>
       </footer>
     </div>
 
