--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <ul>
             <li><a href="#intro">About</a></li>
             <li><a href="#work">WORK</a></li>
-            <li><a href="#about">Resume</a></li>
+            <li><a href="#about">Tech Stack</a></li>
           </ul>
         </nav>
         <div class="content">
@@ -86,7 +86,15 @@
       <div id="main">
         <!-- Intro -->
         <article id="intro">
-          <h2 class="major">ABOUT</h2>
+          <div style="display: flex; justify-content: space-between" }}>
+            <a href="#" style="border-bottom: none"
+              ><i
+                class="fas fa-chevron-left"
+                style="padding: 20px; height: 20px"
+              ></i
+            ></a>
+            <h2 class="major">ABOUT</h2>
+          </div>
           <span class="image main"><img src="images/intro.jpg" alt="" /></span>
           <p>
             Hi, My name is Ekaterina or Katya for short. I have background in
@@ -116,6 +124,13 @@
             that’s passionate about the product that creates social good.
           </p>
           <p>By the way, check out my <a href="#work">awesome work</a>.</p>
+          <a
+            href="/images/Resume_EkaterinaSerga_SoftwareDeveloper.pdf"
+            download="Resume_EkaterinaSerga_SoftwareDeveloper.pdf"
+            class="button resumeDownload"
+          >
+            DOWNLOAD MY RESUME
+          </a>
         </article>
 
         <!-- Work -->
@@ -400,18 +415,126 @@
                 style="padding: 20px; height: 20px"
               ></i
             ></a>
-            <h2 class="major">RESUME</h2>
+            <h2 class="major">MY TECH STACK</h2>
           </div>
-          <span class="image main"
-            ><img src="/images/Resume_EkaterinaSerga.png" alt=""
-          /></span>
-          <a
-            href="/images/Resume_EkaterinaSerga_SoftwareDeveloper.pdf"
-            download="Resume_EkaterinaSerga_SoftwareDeveloper.pdf"
-            class="button resumeDownload"
-          >
-            DOWNLOAD
-          </a>
+          <!-- <span class="image main"
+            ><img
+              src="/images/html_css_js.png"
+              alt="HTML, CSS, JavaScript icons"
+          /></span> -->
+          <div class="stack-row">
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/CMVEhOBzk3Zp/html-5"
+                ><img src="https://img.icons8.com/nolan/64/html-5.png" />
+              </a>
+              <p>HTML</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/21278/css3"
+                ><img src="https://img.icons8.com/color/48/000000/css3.png" />
+              </a>
+              <p>CSS</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/108784/javascript"
+                ><img
+                  src="https://img.icons8.com/color/48/000000/javascript.png"
+                />
+              </a>
+              <p>JavaScript</p>
+            </div>
+          </div>
+          <div class="stack-row">
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/wPohyHO_qO1a/react"
+                ><img
+                  src="https://img.icons8.com/officel/160/000000/react.png"
+                />
+              </a>
+              <p>React</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/jD-fJzVguBmw/redux"
+                ><img src="https://img.icons8.com/color/48/000000/redux.png" />
+              </a>
+              <p>Redux</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/54087/nodejs"
+                ><img src="https://img.icons8.com/color/48/000000/nodejs.png" />
+              </a>
+              <p>NodeJS</p>
+            </div>
+          </div>
+          <div class="stack-row">
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/WOB9D18y7S7J/js-squared">
+                <img
+                  src="https://img.icons8.com/windows/32/000000/js-squared.png"
+              /></a>
+              <p>Express</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/38561/postgresql">
+                <img
+                  src="https://img.icons8.com/color/48/000000/postgreesql.png"
+                />
+              </a>
+              <p>PostgreSQL</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/19215/sugar-cube">
+                <img
+                  src="https://img.icons8.com/color/48/000000/sugar-cube.png"
+              /></a>
+              <p>Sequelize</p>
+            </div>
+          </div>
+          <div class="stack-row">
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/t4YbEbA834uH/react-native"
+                ><img src="https://img.icons8.com/nolan/64/react-native.png" />
+              </a>
+              <p>React Native</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/62452/firebase">
+                <img
+                  src="https://img.icons8.com/color/48/000000/firebase.png"
+                />
+              </a>
+              <p>Firebase</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/69454/heroku">
+                <img src="https://img.icons8.com/nolan/64/heroku.png"
+              /></a>
+              <p>Heroku</p>
+            </div>
+          </div>
+          <div class="stack-row">
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/13441/python">
+                ><img src="https://img.icons8.com/color/48/000000/python.png" />
+              </a>
+              <p>Python</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/33039/amazon-web-services">
+                <img
+                  src="https://img.icons8.com/color/96/000000/amazon-web-services.png"
+                />
+              </a>
+              <p>AWS RDS</p>
+            </div>
+            <div class="stack-image">
+              <a href="https://icons8.com/icon/uJM6fQYqDaZK/typescript">
+                <img
+                  src="https://img.icons8.com/color/48/000000/typescript.png"
+              /></a>
+              <p>TypeScript</p>
+            </div>
+          </div>
         </article>
       </div>
 
