update: tech stack block styling

--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           </div>
         </article>
 
-        <!-- Resume -->
+        <!-- Tech Stack -->
         <article id="about">
           <div style="display: flex; justify-content: space-between" }}>
             <a href="#" style="border-bottom: none"
@@ -417,11 +417,6 @@
             ></a>
             <h2 class="major">MY TECH STACK</h2>
           </div>
-          <!-- <span class="image main"
-            ><img
-              src="/images/html_css_js.png"
-              alt="HTML, CSS, JavaScript icons"
-          /></span> -->
           <div class="stack-row">
             <div class="stack-image">
               <a href="https://icons8.com/icon/CMVEhOBzk3Zp/html-5"
