fix: typo with Python image

--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
           </div>
           <div class="stack-row">
             <div class="stack-image">
-              <a href="https://icons8.com/icon/13441/python">
+              <a href="https://icons8.com/icon/13441/python"
                 ><img src="https://img.icons8.com/color/48/000000/python.png" />
               </a>
               <p>Python</p>
