change: about image

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             ></a>
             <h2 class="major">ABOUT</h2>
           </div>
-          <span class="image main"><img src="images/intro.jpg" alt="" /></span>
+          <span class="image main"><img src="images/pic04.jpg" alt="" /></span>
           <p>
             Hi, My name is Ekaterina or Katya for short. I have background in
             international law and e-commerce and am now pursuing a career of
